# company-lens

./: .env.example  .gitignore  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7c3e5fd2d0c1_initial_companies_table_and_etc.py  953932386d32_initial_companies_table.py  a0798b48f87f_add_chunks_sessions_messages_tables.py
app/: main.py
app/core/: llm.py  settings.py
app/models/: __init__.py  chunks.py  company.py  database.py  message.py  session.py
app/routers/: companies.py  messages.py  sessions.py
app/schemas/: company.py  message.py  session.py
app/services/: embedder.py
app/services/rag/: __init__.py  chat.py  guardrails.py  prompts.py  schemas.py
app/services/research/: __init__.py  pipeline.py  prompts.py  queries.py  schemas.py  searcher.py  summarizer.py  synthesizer.py
