[project]
name = "company-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
